kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: library-namespace
  labels:
    name: library-namespace
