kubernetes-manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
  namespace: library-namespace
  labels:
    app: django-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      containers:
        - name: django-app
          image: ivica650/library-backend:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: library-namespace
spec:
  selector:
    app: django-backend
  ports:
    - port: 8000
      targetPort: 8000
