kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  namespace: library-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-service
                port:
                  number: 8501
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
